# Sao-Bac-Dau-Course-2024

./: README.md
1.2.5-Embedded-Development-Tools/forward-kinematics/: README.md
1.2.5-Embedded-Development-Tools/forward-kinematics/src/: CMakeLists.txt  fk_poe.cpp  main.cpp
1.2.5-Embedded-Development-Tools/forward-kinematics/src/linalg/: CMakeLists.txt  linalg.cpp  linalg.h
1.2.6-Device driver/: device_driver.c  firmware_image.txt
